--- a/stable/plot_eth.ipynb
+++ b/stable/plot_eth.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +109,13 @@
     "        ax.set_xlim([merged_df['date'].iloc[0], merged_df['date'].iloc[-1]])\n",
     "        ax.tick_params(axis='x', rotation=45, labelsize=10)\n",
     "        ax.set_facecolor('#212946')\n",
+    "    \n",
+    "    output_folder = './results/z_score_charts'\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    "    \n",
+    "    # plt.savefig(os.path.join(output_folder, f'{chain_name}_tvl\\'.png'))\n",
+    "    print(f\"{chain_name} TVL' Z-Score chart with Price has been saved ({chain_name}_3.png)\")\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()"
