--- a/etherscan/test.ipynb
+++ b/etherscan/test.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "import time\n",
+    "import pytz\n",
+    "import os\n",
+    "import logging\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "from typing import Tuple, List, Optional\n",
     "from etherscan_functions import get_erc20_transfers, get_block_number_by_timestamp\n",
     "\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
+    "logger = logging.getLogger()\n",
+    "\n",
+    "START_DATE = \"2024-12-10 08:00\"\n",
+    "END_DATE = \"2024-12-11 08:00\"\n",
+    "OUTPUT_FILE = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result'\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # my free API key, you can get one at https://etherscan.io/myapikey\n",
     "base_url = \"https://api.etherscan.io/v2/api\" # We're using the v2 API 2024/12/12\n",
     "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\" # Address of the contract we want to get the source code of\n",
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,55 +54,172 @@
     "    :raises ValueError: If input dates are invalid or API responses indicate failure.\n",
     "    :raises ConnectionError: If the HTTP request fails.\n",
     "    \"\"\"\n",
-    "    # Convert dates to Unix timestamps\n",
+    "    # Convert input time (Singapore Time) to UTC\n",
+    "    singapore_tz = pytz.timezone(\"Asia/Singapore\")\n",
+    "    utc_tz = pytz.utc\n",
+    "\n",
     "    try:\n",
-    "        start_timestamp = int(datetime.strptime(start_date, \"%Y-%m-%d\").timestamp())\n",
-    "        end_timestamp = int(datetime.strptime(end_date, \"%Y-%m-%d\").timestamp())\n",
+    "        # Parse input dates and localize to Singapore timezone\n",
+    "        start_dt_sgt = singapore_tz.localize(datetime.strptime(start_date, \"%Y-%m-%d %H:%M\"))\n",
+    "        end_dt_sgt = singapore_tz.localize(datetime.strptime(end_date, \"%Y-%m-%d %H:%M\"))\n",
     "    except ValueError:\n",
-    "        raise ValueError(\"Dates must be in 'YYYY-MM-DD' format.\")\n",
+    "        raise ValueError(\"Dates must be in 'YYYY-MM-DD HH:MM' format.\")\n",
+    "\n",
+    "    # Convert Singapore time to UTC\n",
+    "    start_timestamp = int(start_dt_sgt.astimezone(utc_tz).timestamp())\n",
+    "    end_timestamp = int(end_dt_sgt.astimezone(utc_tz).timestamp())\n",
     "\n",
     "    if start_timestamp >= end_timestamp:\n",
     "        raise ValueError(\"Start date must be earlier than end date.\")\n",
-    "    \n",
-    "    # Get block numbers for the start and end timestamps\n",
-    "    start_block = get_block_number_by_timestamp(timestamp=start_timestamp, closest=closest)\n",
-    "    end_block = get_block_number_by_timestamp(timestamp=end_timestamp, closest=closest)\n",
     "\n",
-    "    # If include_all is True, generate the list of all blocks in the range\n",
+    "    # Fetch block numbers using timestamps\n",
+    "    start_block = get_block_number_by_timestamp(timestamp=start_timestamp, closest=\"before\")\n",
+    "    end_block = get_block_number_by_timestamp(timestamp=end_timestamp, closest=\"after\")\n",
+    "    # combine the use of 'before' and 'after' to get a wider range of blocks\n",
+    "\n",
+    "\n",
+    "    # Return range or just start and end block numbers\n",
     "    if include_all:\n",
     "        return list(range(start_block, end_block + 1))\n",
-    "    \n",
-    "    # Otherwise, return just the start and end blocks\n",
     "    return [start_block, end_block]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# start_block, end_block = get_block_numbers(start_date=\"2024-11-10\", end_date=\"2024-11-16\", closest=\"before\", include_all=False)\n",
-    "# set 'before' to get the block number less or qual to the timestamp. set 'after' to get the block number greater or equal to the timestamp\n",
+    "def fetch_erc20_transfers(address: str, start_block: int, end_block: int, offset: int = 100) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Fetch ERC20 token transfer data and process it into a DataFrame.\n",
+    "    \"\"\"\n",
+    "    all_transfers = []\n",
+    "    page = 1\n",
     "\n",
-    "start_block, _ = get_block_numbers(start_date=\"2024-11-10\", end_date=\"2024-11-16\", closest=\"before\", include_all=False)\n",
-    "_, end_block = get_block_numbers(start_date=\"2024-11-10\", end_date=\"2024-11-16\", closest=\"after\", include_all=False)\n",
+    "    logger.info(f\"Fetching ERC20 transfers from block {start_block} to {end_block}...\")\n",
     "\n",
-    "transfers = get_erc20_transfers(\n",
-    "        address=ADDRESS,\n",
-    "        contract_address=None,\n",
-    "        startblock=start_block,\n",
-    "        endblock=end_block,\n",
-    "        page=1,\n",
-    "        offset=100,\n",
-    "    )\n",
-    "transfers['dateTime'] = pd.to_datetime(pd.to_numeric(transfers['timeStamp'], errors='coerce'), unit='s').dt.strftime('%Y-%m-%d %H:%M:%S')\n",
-    "# Reorder columns, moving 'dateTime' to the front\n",
-    "cols = ['dateTime'] + [col for col in transfers if col != 'dateTime']\n",
-    "transfers = transfers[cols]\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # 调用 API 获取数据\n",
+    "            transfers = get_erc20_transfers(\n",
+    "                address=address, startblock=start_block, endblock=end_block, page=page, offset=offset\n",
+    "            )\n",
     "\n",
-    "transfers.describe()\n",
-    "transfers.to_csv('./erc20_transfers.csv', index=False)\n"
+    "            # 验证返回的数据格式\n",
+    "            if transfers is None:\n",
+    "                logger.warning(\"API returned None. Exiting...\")\n",
+    "                break\n",
+    "            if isinstance(transfers, list) and len(transfers) == 0:\n",
+    "                logger.info(\"Empty list received. Exiting...\")\n",
+    "                break\n",
+    "            if isinstance(transfers, pd.DataFrame) and transfers.empty:\n",
+    "                logger.info(\"Empty DataFrame received. Exiting...\")\n",
+    "                break\n",
+    "\n",
+    "            # 将数据转换为 DataFrame\n",
+    "            if isinstance(transfers, list):\n",
+    "                transfers_df = pd.DataFrame(transfers)\n",
+    "            elif isinstance(transfers, pd.DataFrame):\n",
+    "                transfers_df = transfers\n",
+    "            else:\n",
+    "                logger.warning(f\"Unexpected data format: {type(transfers)}. Exiting...\")\n",
+    "                break\n",
+    "\n",
+    "            # 判断 DataFrame 是否为空\n",
+    "            if transfers_df.empty:\n",
+    "                logger.info(\"Empty DataFrame received. Exiting...\")\n",
+    "                break\n",
+    "\n",
+    "            # 将当前页数据添加到总列表\n",
+    "            all_transfers.extend(transfers_df.to_dict(orient='records'))\n",
+    "            logger.info(f\"Page {page}: Retrieved {len(transfers_df)} transactions.\")\n",
+    "            page += 1\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            logger.warning(f\"API request failed on page {page}: {e}\")\n",
+    "            break\n",
+    "\n",
+    "    # 全局去重\n",
+    "    final_df = pd.DataFrame(all_transfers).drop_duplicates(subset=['hash'], keep='first')\n",
+    "    logger.info(f\"Final dataset contains {len(final_df)} unique transactions.\")\n",
+    "    return final_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_and_save_transfers(transfers_df: pd.DataFrame, output_file: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Process ERC20 transfers DataFrame and save to a CSV file.\n",
+    "    \"\"\"\n",
+    "    if not transfers_df.empty:\n",
+    "        transfers_df['dateTime'] = pd.to_datetime(\n",
+    "            pd.to_numeric(transfers_df['timeStamp'], errors='coerce'), unit='s', utc=True\n",
+    "        ).dt.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "        # 重新排列列顺序\n",
+    "        cols = ['dateTime'] + [col for col in transfers_df.columns if col != 'dateTime']\n",
+    "        transfers_df = transfers_df[cols]\n",
+    "        output_file = os.path.join(output_file, 'erc20_transfers.csv')\n",
+    "\n",
+    "        transfers_df.to_csv(output_file, index=False, encoding='utf-8')\n",
+    "        logger.info(f\"Data successfully saved to {output_file}\")\n",
+    "    else:\n",
+    "        logger.warning(\"No valid transfers to save. DataFrame is empty.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Fetching ERC20 transfers from block 21368389 to 21375546...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21368389 21375546\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Page 1: Retrieved 14 transactions.\n",
+      "WARNING:root:API request failed on page 2: Request failed: No transactions found\n",
+      "INFO:root:Final dataset contains 14 unique transactions.\n",
+      "INFO:root:Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    try:\n",
+    "        # 获取起始和结束 block number\n",
+    "        start_block, end_block = get_block_numbers(start_date=START_DATE, end_date=END_DATE, include_all=False)\n",
+    "        print(start_block, end_block)\n",
+    "        # 拉取 ERC20 转账数据\n",
+    "        transfers_df = fetch_erc20_transfers(address=ADDRESS, start_block=start_block, end_block=end_block)\n",
+    "\n",
+    "        # 数据处理与保存\n",
+    "        process_and_save_transfers(transfers_df, OUTPUT_FILE)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"An error occurred during the execution: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
