--- a/etherscan/data_fetch.ipynb
+++ b/etherscan/data_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "from typing import Tuple, List, Optional\n",
-    "from etherscan_functions import get_erc20_transfers, get_block_number_by_timestamp\n",
+    "from etherscan_functions import get_erc20_transfers, get_block_numbers_by_date\n",
     "\n",
     "\n",
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
     "logger = logging.getLogger()\n",
     "\n",
-    "START_DATE = \"2024-12-10 08:00\"\n",
-    "END_DATE = \"2024-12-11 08:00\"\n",
+    "START_DATE = \"2024-12-15 08:00\"\n",
+    "END_DATE = \"2024-12-16 08:00\"\n",
     "OUTPUT_FILE = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result'\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # my free API key, you can get one at https://etherscan.io/myapikey\n",
     "base_url = \"https://api.etherscan.io/v2/api\" # We're using the v2 API 2024/12/12\n",
@@ -29,70 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_block_numbers(\n",
-    "    start_date: str,\n",
-    "    end_date: str,\n",
-    "    closest: str = \"before\",\n",
-    "    include_all: bool = False,\n",
-    ") -> List[int]:\n",
-    "    \"\"\"\n",
-    "    Returns block numbers for a specified date range.\n",
-    "\n",
-    "    :param start_date: Start date in 'YYYY-MM-DD' format.\n",
-    "    :param end_date: End date in 'YYYY-MM-DD' format.\n",
-    "    :param closest: 'before' or 'after', to find the closest block.\n",
-    "    :param include_all: If True, returns all block numbers in the range. \n",
-    "                        If False, only returns the start and end block numbers.\n",
-    "    :return: A list of block numbers. \n",
-    "             If include_all is True, includes all blocks in the range. \n",
-    "             Otherwise, includes only the start and end block numbers.\n",
-    "\n",
-    "    :raises ValueError: If input dates are invalid or API responses indicate failure.\n",
-    "    :raises ConnectionError: If the HTTP request fails.\n",
-    "    \"\"\"\n",
-    "    # Convert input time (Singapore Time) to UTC\n",
-    "    singapore_tz = pytz.timezone(\"Asia/Singapore\")\n",
-    "    utc_tz = pytz.utc\n",
-    "\n",
-    "    try:\n",
-    "        # Parse input dates and localize to Singapore timezone\n",
-    "        start_dt_sgt = singapore_tz.localize(datetime.strptime(start_date, \"%Y-%m-%d %H:%M\"))\n",
-    "        end_dt_sgt = singapore_tz.localize(datetime.strptime(end_date, \"%Y-%m-%d %H:%M\"))\n",
-    "    except ValueError:\n",
-    "        raise ValueError(\"Dates must be in 'YYYY-MM-DD HH:MM' format.\")\n",
-    "\n",
-    "    # Convert Singapore time to UTC\n",
-    "    start_timestamp = int(start_dt_sgt.astimezone(utc_tz).timestamp())\n",
-    "    end_timestamp = int(end_dt_sgt.astimezone(utc_tz).timestamp())\n",
-    "\n",
-    "    if start_timestamp >= end_timestamp:\n",
-    "        raise ValueError(\"Start date must be earlier than end date.\")\n",
-    "\n",
-    "    # Fetch block numbers using timestamps\n",
-    "    start_block = get_block_number_by_timestamp(timestamp=start_timestamp, closest=\"before\")\n",
-    "    end_block = get_block_number_by_timestamp(timestamp=end_timestamp, closest=\"after\")\n",
-    "    # combine the use of 'before' and 'after' to get a wider range of blocks\n",
-    "\n",
-    "\n",
-    "    # Return range or just start and end block numbers\n",
-    "    if include_all:\n",
-    "        return list(range(start_block, end_block + 1))\n",
-    "    return [start_block, end_block]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch_erc20_transfers(address: str, start_block: int, end_block: int, offset: int = 100) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Fetch ERC20 token transfer data and process it into a DataFrame.\n",
+    "    :param address: Contract address you decide to fetch the data from.\n",
+    "    :param start_block: Start block number.\n",
+    "    :param end_block: End block number.\n",
+    "    :param offset: Number of transactions to fetch per API call.\n",
     "    \"\"\"\n",
     "    all_transfers = []\n",
     "    page = 1\n",
@@ -101,12 +48,10 @@
     "\n",
     "    while True:\n",
     "        try:\n",
-    "            # 调用 API 获取数据\n",
     "            transfers = get_erc20_transfers(\n",
     "                address=address, startblock=start_block, endblock=end_block, page=page, offset=offset\n",
     "            )\n",
     "\n",
-    "            # 验证返回的数据格式\n",
     "            if transfers is None:\n",
     "                logger.warning(\"API returned None. Exiting...\")\n",
     "                break\n",
@@ -117,7 +62,6 @@
     "                logger.info(\"Empty DataFrame received. Exiting...\")\n",
     "                break\n",
     "\n",
-    "            # 将数据转换为 DataFrame\n",
     "            if isinstance(transfers, list):\n",
     "                transfers_df = pd.DataFrame(transfers)\n",
     "            elif isinstance(transfers, pd.DataFrame):\n",
@@ -126,12 +70,10 @@
     "                logger.warning(f\"Unexpected data format: {type(transfers)}. Exiting...\")\n",
     "                break\n",
     "\n",
-    "            # 判断 DataFrame 是否为空\n",
     "            if transfers_df.empty:\n",
     "                logger.info(\"Empty DataFrame received. Exiting...\")\n",
     "                break\n",
     "\n",
-    "            # 将当前页数据添加到总列表\n",
     "            all_transfers.extend(transfers_df.to_dict(orient='records'))\n",
     "            logger.info(f\"Page {page}: Retrieved {len(transfers_df)} transactions.\")\n",
     "            page += 1\n",
@@ -140,15 +82,14 @@
     "            logger.warning(f\"API request failed on page {page}: {e}\")\n",
     "            break\n",
     "\n",
-    "    # 全局去重\n",
-    "    final_df = pd.DataFrame(all_transfers).drop_duplicates(subset=['hash'], keep='first')\n",
+    "    final_df = pd.DataFrame(all_transfers)\n",
     "    logger.info(f\"Final dataset contains {len(final_df)} unique transactions.\")\n",
     "    return final_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,8 +101,6 @@
     "        transfers_df['dateTime'] = pd.to_datetime(\n",
     "            pd.to_numeric(transfers_df['timeStamp'], errors='coerce'), unit='s', utc=True\n",
     "        ).dt.strftime('%Y-%m-%d %H:%M:%S')\n",
-    "\n",
-    "        # 重新排列列顺序\n",
     "        cols = ['dateTime'] + [col for col in transfers_df.columns if col != 'dateTime']\n",
     "        transfers_df = transfers_df[cols]\n",
     "        output_file = os.path.join(output_file, 'erc20_transfers.csv')\n",
@@ -169,57 +108,75 @@
     "        transfers_df.to_csv(output_file, index=False, encoding='utf-8')\n",
     "        logger.info(f\"Data successfully saved to {output_file}\")\n",
     "    else:\n",
-    "        logger.warning(\"No valid transfers to save. DataFrame is empty.\")\n",
-    "\n"
+    "        logger.warning(\"No valid transfers to save. DataFrame is empty.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Fetching ERC20 transfers from block 21368389 to 21375546...\n"
+      "2024-12-16 16:51:33,989 - INFO - Fetching ERC20 transfers from block 21404196 to 21411357...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21368389 21375546\n"
+      "21404196 21411357\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Page 1: Retrieved 14 transactions.\n",
-      "WARNING:root:API request failed on page 2: Request failed: No transactions found\n",
-      "INFO:root:Final dataset contains 14 unique transactions.\n",
-      "INFO:root:Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n"
+      "2024-12-16 16:51:34,906 - INFO - Page 1: Retrieved 39 transactions.\n",
+      "2024-12-16 16:51:35,857 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2024-12-16 16:51:35,857 - INFO - Final dataset contains 39 unique transactions.\n",
+      "2024-12-16 16:51:35,874 - ERROR - An error occurred during the execution: [Errno 13] Permission denied: 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\\\erc20_transfers.csv'\n"
      ]
     }
    ],
    "source": [
-    "def main():\n",
-    "    try:\n",
-    "        # 获取起始和结束 block number\n",
-    "        start_block, end_block = get_block_numbers(start_date=START_DATE, end_date=END_DATE, include_all=False)\n",
-    "        print(start_block, end_block)\n",
-    "        # 拉取 ERC20 转账数据\n",
-    "        transfers_df = fetch_erc20_transfers(address=ADDRESS, start_block=start_block, end_block=end_block)\n",
+    "try:\n",
+    "    # get the block numbers\n",
+    "    start_block, end_block = get_block_numbers_by_date(start_date=START_DATE, end_date=END_DATE, include_all=False)\n",
+    "    print(start_block, end_block)\n",
+    "    # fetch the ERC20 transfers\n",
+    "    transfers_df = fetch_erc20_transfers(address=ADDRESS, start_block=start_block, end_block=end_block)\n",
+    "    \n",
+    "    process_and_save_transfers(transfers_df, OUTPUT_FILE)\n",
     "\n",
-    "        # 数据处理与保存\n",
-    "        process_and_save_transfers(transfers_df, OUTPUT_FILE)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        logger.error(f\"An error occurred during the execution: {e}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "except Exception as e:\n",
+    "    logger.error(f\"An error occurred during the execution: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_file = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result/erc20_transfers.csv'\n",
+    "transaction_data = pd.read_csv(csv_file)\n",
+    "# print(transaction_data.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def highlight_three_records(grouped_df):\n",
+    "    for tx_hash, group in grouped_df:\n",
+    "        if len(group) == 3:\n",
+    "            print(f\"⚠️ High Alert: Transaction Hash {tx_hash} contains 3 records:\")\n",
+    "            print(group)"
    ]
   },
   {
@@ -228,6 +185,38 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global BASE_TOKENS\n",
+    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
+    "\n",
+    "# 1. 筛选并剔除同一 Transaction Hash 的数据\n",
+    "multi_tx_df, remaining_df = extract_and_remove_hash_records(df)\n",
+    "print(\"Transactions with duplicate hashes:\")\n",
+    "print(multi_tx_df)\n",
+    "\n",
+    "# 2. 处理剩余数据的相邻交易\n",
+    "adjacent_analysis = analyze_adjacent_transactions(remaining_df)\n",
+    "print(\"\\nAnalysis of Adjacent Transactions:\")\n",
+    "print(adjacent_analysis)\n",
+    "\n",
+    "# 3. 合并结果并保存\n",
+    "combined_results = pd.concat([multi_tx_df, adjacent_analysis]).drop_duplicates()\n",
+    "combined_results.to_csv(\"transaction_analysis_output.csv\", index=False)\n",
+    "print(\"\\nResults saved to 'transaction_analysis_output.csv'.\")"
+   ]
   }
  ],
  "metadata": {
