初步实现下记账本的功能

--- a/etherscan/data_fetch.ipynb
+++ b/etherscan/data_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
     "logger = logging.getLogger()\n",
     "\n",
-    "START_DATE = \"2024-12-15 08:00\"\n",
+    "START_DATE = \"2024-12-14 08:00\"\n",
     "END_DATE = \"2024-12-16 08:00\"\n",
     "OUTPUT_FILE = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result'\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # my free API key, you can get one at https://etherscan.io/myapikey\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,31 +113,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-16 16:51:33,989 - INFO - Fetching ERC20 transfers from block 21404196 to 21411357...\n"
+      "2024-12-17 12:03:40,064 - INFO - Fetching ERC20 transfers from block 21397030 to 21411357...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21404196 21411357\n"
+      "21397030 21411357\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-16 16:51:34,906 - INFO - Page 1: Retrieved 39 transactions.\n",
-      "2024-12-16 16:51:35,857 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
-      "2024-12-16 16:51:35,857 - INFO - Final dataset contains 39 unique transactions.\n",
-      "2024-12-16 16:51:35,874 - ERROR - An error occurred during the execution: [Errno 13] Permission denied: 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\\\erc20_transfers.csv'\n"
+      "2024-12-17 12:03:41,250 - INFO - Page 1: Retrieved 94 transactions.\n",
+      "2024-12-17 12:03:42,199 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2024-12-17 12:03:42,200 - INFO - Final dataset contains 94 unique transactions.\n",
+      "2024-12-17 12:03:42,200 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n"
      ]
     }
    ],
@@ -153,69 +153,6 @@
     "\n",
     "except Exception as e:\n",
     "    logger.error(f\"An error occurred during the execution: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csv_file = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result/erc20_transfers.csv'\n",
-    "transaction_data = pd.read_csv(csv_file)\n",
-    "# print(transaction_data.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def highlight_three_records(grouped_df):\n",
-    "    for tx_hash, group in grouped_df:\n",
-    "        if len(group) == 3:\n",
-    "            print(f\"⚠️ High Alert: Transaction Hash {tx_hash} contains 3 records:\")\n",
-    "            print(group)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "global BASE_TOKENS\n",
-    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
-    "\n",
-    "# 1. 筛选并剔除同一 Transaction Hash 的数据\n",
-    "multi_tx_df, remaining_df = extract_and_remove_hash_records(df)\n",
-    "print(\"Transactions with duplicate hashes:\")\n",
-    "print(multi_tx_df)\n",
-    "\n",
-    "# 2. 处理剩余数据的相邻交易\n",
-    "adjacent_analysis = analyze_adjacent_transactions(remaining_df)\n",
-    "print(\"\\nAnalysis of Adjacent Transactions:\")\n",
-    "print(adjacent_analysis)\n",
-    "\n",
-    "# 3. 合并结果并保存\n",
-    "combined_results = pd.concat([multi_tx_df, adjacent_analysis]).drop_duplicates()\n",
-    "combined_results.to_csv(\"transaction_analysis_output.csv\", index=False)\n",
-    "print(\"\\nResults saved to 'transaction_analysis_output.csv'.\")"
    ]
   }
  ],
